--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="title_notifications">Notifications</string>
     <string name="title_switch">Switch</string>
     <string name="title_profil">Profil</string>
+    <string name="title_activity_host">ActivityHost</string>
+    <string name="title_search">Rechercher</string>
+    <string name="title_host">Proposer</string>
 </resources>
