--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,8 @@
     <string name="title_timeline">Historique</string>
     <string name="title_profile">Profil</string>
 
+    <string name="add_event">Ajouter</string>
+
     <string name="title_activity_create_event">Nouvel événement</string>
     <string name="save_event">Enregistrer</string>
     <string name="event_name">Nom de l\'événement</string>
